# MBZIRC2023

./: README.md
CameraServer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CameraServer/Jacob_box/: BoxDetection.cpp  BoxDetection.h
CameraServer/Martin_box/: CMakeCache.txt  CMakeLists.txt  Makefile  boxDetection.cpp  cmake_install.cmake  findAngleClass.cpp  findAngleClass.hpp  main  main.cpp  main_wall.cpp
CameraServer/Naval_box_detection/: CMakeLists.txt  main.cpp
CameraServer/Naval_box_detection/include/: navalBoxDetection.hpp
CameraServer/Naval_box_detection/src/: navalBoxDetection.cpp
CameraServer/extra_files/: CameraLocalizer.h_txt  CameraLocalizer.txt  InterfaceSocket.cpp  InterfaceSocket.hpp  LAN_image.py  image_decoder.py  imshow_LAN.py  server_cpp.txt  simple_listen.py  view_streamer.py
CameraServer/include/: BallLocalizer.hpp  BalloonFinder.hpp  CameraServer.hpp  Gimbal.hpp  MJPEGWriter.h  aruco_map.hpp  aruco_pose.hpp  boxDetection.hpp  marker_follow.hpp  navalBoxDetection.hpp  type_defines.hpp
CameraServer/log/: camera_log.txt
CameraServer/maps/: 2_boxes.xml  map1.xml  startmap.xml
CameraServer/src/: BallLocalizer.cpp  BalloonFinder.cpp  CameraServer.cpp  Gimbal.cpp  MJPEGWriter.cpp  aruco_map.cpp  aruco_pose.cpp  boxDetection.cpp  loop-heartbeat.cpp  marker_follow.cpp  navalBoxDetection.cpp  rotations.cpp  server_main.cpp
DJI_OSDK/Onboard-SDK-3.8/: CMakeLists.txt  OSDK notes.odt
DJI_OSDK/Onboard-SDK-3.8/Config_files/: UserConfig.txt  old_UserConfig.txt
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/: CMakeLists.txt
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/DynamixelSDK-master/DynamixelSDK-master/c++/example/protocol2.0/read_write/: read_write.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/DynamixelSDK-master/DynamixelSDK-master/c++/example/protocol2.0/read_write/linux_sbc/: read_write
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/box-mission-final/: CMakeLists.txt  main.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/camera_tester/: CMakeLists.txt  Makefile  main.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/gripper_tester/: CMakeLists.txt  Makefile  main.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/lib-dynamixel-master/: README.md
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/lib-dynamixel-master/src/dynamixel/: CMakeLists.txt  package.xml
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/lib-dynamixel-master/src/dynamixel/include/dynamixel/: Utils.h
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/lib-dynamixel-master/src/dynamixel/src/dynamixel/: Dynamixel.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/lib-dynamixel-master/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dynamixel_test  main.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/naval-box-mission/: CMakeLists.txt  main.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/sensors/: CMakeLists.txt  CameraServerInterface.cpp  CameraServerInterface.hpp  ControllerBase.cpp  ControllerBase.hpp  FireBlanket.cpp  FireBlanket.hpp  FlirCamera.cpp  FlirCamera.hpp  GeneralCommands.cpp  GeneralCommands.hpp  GimbalControl.cpp  GimbalControl.hpp  LaserScanner.cpp  LaserScanner.hpp  Makefile  PIDController.cpp  PIDController.h  PIDPositionControl.cpp  PIDPositionControl.hpp  PickupArm.cpp  PickupArm.hpp  Rangefinder.cpp  Rangefinder.hpp  RollPitchController.cpp  RollPitchController.hpp  balloonPopper.cpp  balloonPopper.hpp  boxGripper.cpp  boxGripper.hpp  cmake_install.cmake  loop-heartbeat.cpp  loop-heartbeat.hpp  pid.cpp  pid.h  random_unused_functions.txt  type_defines.hpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/sensors/lib-dynamixel-master/src/dynamixel/include/dynamixel/: Dynamixel.h
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/sensors/lib-dynamixel-master/src/dynamixel/src/dynamixel/: SerialPort.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/sensors/lib-dynamixel-master/test/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
DJI_OSDK/Onboard-SDK-3.8/mbzirc2023/test-flight-mission/: CMakeLists.txt  Makefile  main.cpp
DJI_OSDK/Onboard-SDK-3.8/osdk-core/: CMakeLists.txt  Makefile  cmake_install.cmake  djiosdkTargets.cmake
DJI_OSDK/Onboard-SDK-3.8/osdk-core/api/inc/: dji_broadcast.hpp  dji_control.hpp  dji_vehicle.hpp
DJI_OSDK/Onboard-SDK-3.8/osdk-core/api/src/: dji_broadcast.cpp  dji_command.cpp  dji_control.cpp  dji_vehicle.cpp
DJI_OSDK/Onboard-SDK-3.8/osdk-core/platform/linux/inc/: linux_serial_device.hpp
DJI_OSDK/Onboard-SDK-3.8/osdk-core/platform/linux/src/: linux_serial_device.cpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/: CMakeLists.txt  Makefile  cmake_install.cmake
DJI_OSDK/Onboard-SDK-3.8/sample/linux/autnav-test/: CMakeLists.txt  autnav_control.cpp  autnav_control.hpp  loop-heartbeat.cpp  main.cpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/common/: dji_linux_helpers.cpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/flight-control/: flight_control_sample.cpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/sim-test-flight-control/: CMakeLists.txt  attitude-control.cpp  attitude-control.hpp  main.cpp  orig-flight-control-sample.cpp  orig-flight-control-sample.hpp  velocity-control.cpp  velocity-control.hpp  virtual-rc-control.cpp  virtual-rc-control.hpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/telemetry/: telemetry_sample.cpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/test_sensors/: CMakeLists.txt  CameraLocalizer.cpp  CameraLocalizer.hpp  GeneralCommands.cpp  GeneralCommands.hpp  InternalThread.hpp  aruco_map.cpp  aruco_pose.cpp  aruco_pose.h  loop-heartbeat.cpp  loop-heartbeat.hpp  main.cpp  rotations.cpp  rotations.h  test.cpp  test.hpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/test_sensors/old_stuff/: aruco_map.cpp  aruco_pose.cpp  aruco_pose.h  old_cam.cpp  old_cam.h  old_cam.hpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/time-sync/: Makefile  cmake_install.cmake
DJI_OSDK/Onboard-SDK-3.8/sample/linux/timing-test/: CMakeLists.txt  Makefile  cmake_install.cmake  flight-control.kdev4  loop-heartbeat.cpp  loop-heartbeat.hpp  main.cpp
DJI_OSDK/Onboard-SDK-3.8/sample/linux/timing-test/.kdev4/: flight-control.kdev4
