<?xml version="1.0"?>
<package>
  <name>dynamixel</name>
  <version>0.0.0</version>
  <description>The dynamixel package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="emfinger@isis.vanderbilt.edu">William Emfinger</maintainer>
  <maintainer email="pkumar@isis.vanderbilt.edu">Pranav Srinivas Kumar</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
